Resize font to ensure it fits on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
   padding-top: 0px;
   color:#FFFFFF;
   border-radius: 20px;
-  font: 24px 'Gugi', cursive;
+  font: 16px 'Gugi', cursive;
   text-align: center;
   margin: 10px 45px 10px 0px;
   max-width: 600px;
